RESOLVED FIXED101896
PDFPlugin should use PDFKit's context menu instead of the default WebKit one
https://bugs.webkit.org/show_bug.cgi?id=101896
Summary PDFPlugin should use PDFKit's context menu instead of the default WebKit one
Tim Horton
Reported 2012-11-11 22:46:20 PST
Technically, we should hand the context menu through the somewhat-complex context menu system so that clients can add custom menu items. I'll do that in a followup patch. This also makes most of the context menu items function properly (except the ones that already have FIXMEs in PDFPlugin). <rdar://problem/12555173>
Attachments
patch (18.11 KB, patch)
2012-11-11 22:55 PST, Tim Horton
andersca: review+
Tim Horton
Comment 1 2012-11-11 22:55:29 PST
WebKit Review Bot
Comment 2 2012-11-11 22:58:28 PST
Attachment 173564 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.h:96: The parameter name "event" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2012-11-12 16:26:44 PST
Note You need to log in before you can comment on or make changes to this bug.