Source/WebKit2/WebProcess/Plugins/PDF/PDFLayerControllerDetails.h
@@ -36,6 +36,7 @@
 
 - (void)pdfLayerController:(PDFLayerController *)pdfLayerController didChangeActiveAnnotation:(PDFAnnotation *)annotation;
 - (void)pdfLayerController:(PDFLayerController *)pdfLayerController clickedLinkWithURL:(NSURL *)url;
+- (void)pdfLayerController:(PDFLayerController *)pdfLayerController didChangeContentScaleFactor:(CGFloat)scaleFactor;
 
 @end
 
@@ -53,8 +54,8 @@
 - (void)setDisplayMode:(int)mode;
 - (void)setDisplaysPageBreaks:(BOOL)pageBreaks;
 
-- (CGFloat)tileScaleFactor;
-- (void)setTileScaleFactor:(CGFloat)scaleFactor;
+- (CGFloat)contentScaleFactor;
+- (void)setContentScaleFactor:(CGFloat)scaleFactor;
 
 - (CGFloat)deviceScaleFactor;
 - (void)setDeviceScaleFactor:(CGFloat)scaleFactor;
@@ -71,11 +72,14 @@
 - (void)scrollWithDelta:(CGSize)delta;
 
 - (void)mouseDown:(NSEvent *)event;
+- (void)rightMouseDown:(NSEvent *)event;
 - (void)mouseMoved:(NSEvent *)event;
 - (void)mouseUp:(NSEvent *)event;
 - (void)mouseDragged:(NSEvent *)event;
 - (void)mouseEntered:(NSEvent *)event;
 - (void)mouseExited:(NSEvent *)event;
+
+- (NSMenu *)menuForEvent:(NSEvent *)event;
 
 - (NSArray *)findString:(NSString *)string caseSensitive:(BOOL)isCaseSensitive highlightMatches:(BOOL)shouldHighlightMatches;
 
