Source/WebKit2/WebProcess/Plugins/PDF/SimplePDFPlugin.h
@@ -171,6 +171,8 @@ protected:
 
     virtual bool shouldAllowScripting() OVERRIDE { return false; }
 
+    WebCore::IntSize m_scrollOffset;
+
 private:
 
     JSObjectRef makeJSPDFDoc(JSContextRef);
@@ -191,8 +193,6 @@ private:
     RefPtr<WebCore::Scrollbar> m_verticalScrollbar;
 
     WebFrame* m_frame;
-
-    WebCore::IntSize m_scrollOffset;
 };
 
 } // namespace WebKit
